# guoChat

./: build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/objectbox-models/: default.json  default.json.bak
app/src/main/: AndroidManifest.xml
app/src/main/assets/: audio_record.json
comic/: build.gradle
comic/objectbox-models/: default.json.bak
comic/src/main/: AndroidManifest.xml
database/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
imageviewer/: build.gradle
imageviewer/src/main/: AndroidManifest.xml
module_base/: build.gradle  proguard-rules.pro
module_base/src/main/: AndroidManifest.xml
module_chat/: build.gradle
module_chat/libs/: backboard_0.1.2.aar
module_chat/objectbox-models/: default.json.bak
module_chat/src/main/: AndroidManifest.xml
module_comic/: build.gradle
module_core/: build.gradle
module_core/src/main/: AndroidManifest.xml
module_core/src/main/cpp/: CMakeLists.txt  bitmap_util.cpp  bitmap_util.h  log_util.h  native-lib.cpp
module_database/: build.gradle
module_database/objectbox-models/: default.json  default.json.bak
module_database/src/main/: AndroidManifest.xml
module_media/: build.gradle
module_media/src/main/: AndroidManifest.xml
module_openeye/: build.gradle
module_openeye/src/main/: AndroidManifest.xml
module_wanandroid/: build.gradle
module_wanandroid/src/main/: AndroidManifest.xml
mvvm/: build.gradle  proguard-rules.pro
mvvm/objectbox-models/: default.json
mvvm/src/main/: AndroidManifest.xml
swipelayout/: build.gradle
(+1141 files in other folders)
